Fixed ASRA-14 (modal text left align)

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -2533,4 +2533,8 @@ table.tbl2 {
   padding-left: 0px !important;
 }
 
+.modal-body p {
+  text-align: left;
+}
+
 /* modal style ends */
